data/derived/fa15/progs/unify/prog0853.ml.out
Characters 70-74:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
